Update Integration tests.

--- a/src/__tests__/testServer/test.html
+++ b/src/__tests__/testServer/test.html
@@ -8,7 +8,8 @@
     <p class="with-subelement"><span>Some text.</span></p>
     <p class="with-text-and-subelement">Some text.<span> Sub-element text.</span></p>
     <p class="hidden" style="visibility: hidden">Hidden text</p>
-    <p class="not-displayed" style="display: none">Not displayed text</p>
+    <p class="display-none" style="display: none">Not displayed text</p>
+    <div class="zero" style="width: 0px; height: 0px">zerocontent</div>
 
     <form>
         <input class="input">
