Added .module() extensions

--- a/src/__tests__/testServer/test.html
+++ b/src/__tests__/testServer/test.html
@@ -1,4 +1,5 @@
 <html>
+
 <body>
     <h1>First</h1>
     <h1>Second</h1>
@@ -16,9 +17,6 @@
         <button type="submit">Submit</button>
     </form>
 
-
-
-
     <ul class="simple">
         <li>list1</li>
         <li>list2</li>
@@ -26,39 +24,45 @@
         <li>list4</li>
     </ul>
 
-    <ul class="nested">
+    <ul class="users">
         <li>
-            <ul class=".nested-list1">
-                <li>
-                    <ul class=".nested-list2">
-                        <li>
-                            <ul class=".nested-list3">
-                                <li>
-                                    <ul class=".nested-list4">
-                                        <li>
-                                            <ul class=".nested-list5">
-                                                <li>
-                                                    <ul class=".nested-list6">
-                                                        <li>
-                                                            <ul class=".nested-list7">
-
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="user">
+                <img class="avatar">
+                <h1>Johny Bravo</h1>
+                <p class="address">2856 Taylor St</p>
+            </div>
+        </li>
+        <li>
+            <div class="user">
+                <img class="avatar">
+                <h1>Walter Fields</h1>
+                <p class="address">2685 First Street</p>
+            </div>
+        </li>
+        <li>
+            <div class="user">
+                <img class="avatar">
+                <h1>Charlene Miller</h1>
+                <p class="address">3151 Taylor St</p>
+            </div>
         </li>
     </ul>
+
+    <article class="my-article">
+        <h1>Article heading</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquam semper turpis.</p>
+        <p>lol</p>
+        <button>BUTTON</button>
+    </article>
+
+
+    <p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquam semper turpis</p>
+
+
     <div style="width: 10px; height: 2000px"></div>
+
     <button class="scrolled">Click me.</button>
+
 </body>
 
 </html>
