- Change search element logic  - re-try to search for element if it's reloaded on the page. - Change MatcherArray behavior - not it's indexed from 0 - Fixed ArrayMatcher - now every found element have it's index. - Add some unit tests - Add JSDoc for Elem and Array class

--- a/src/__tests__/testServer/test.html
+++ b/src/__tests__/testServer/test.html
@@ -1,5 +1,4 @@
 <html>
-
 <body>
     <h1>First</h1>
     <h1>Second</h1>
@@ -14,7 +13,9 @@
 
     <form>
         <input class="input">
-        <button type="submit">Submit</button>
+        <div class="redraw">
+            <p>This element will be re-created.</p>
+        </div>
     </form>
 
     <ul class="simple">
@@ -57,12 +58,9 @@
 
 
     <p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquam semper turpis</p>
-
-
     <div style="width: 10px; height: 2000px"></div>
 
     <button class="scrolled">Click me.</button>
-
 </body>
 
 </html>
